# matrix

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixmanager.cpp  matrixmanager.h
